--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "calypsodrop2",
+  "name": "calypsodrop",
   "version": "1.0.0",
   "description": "dropbase for anon files",
   "main": "server.js",
@@ -8,7 +8,7 @@
     "start": "nodemon server.js"
   },
   "author": "calypso",
-  "license": "ISC",
+  "license": "GPL-3.0-or-later",
   "dependencies": {
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.2",
@@ -16,10 +16,26 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "express-validator": "^6.14.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.5",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "pug": "^3.0.2"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/c4lyp5o/calypsodrop.git"
+  },
+  "keywords": [
+    "nodejs",
+    "mongodb",
+    "drop",
+    "file-upload",
+    "anonymous"
+  ],
+  "bugs": {
+    "url": "https://github.com/c4lyp5o/calypsodrop/issues"
+  },
+  "homepage": "https://github.com/c4lyp5o/calypsodrop#readme"
 }
